@@ -1,3 +1,7 @@
+2002-03-17  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* activate-settings-daemon.c: Mark a string. #include <config.h>
+	
 2002-03-17  Jonathan Blandford  <set EMAIL_ADDRESS environment variable>
 
 	reviewed by: <delete if not using a buddy>
